...
                }
            }
            } else {
                Text("No items")
                    .foregroundStyle(.secondary)
            }
        }.navigationTitle("Edit Menu")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    NavigationLink(destination: MenuItemEditorView(), label: {
                        Text("Add New Item")
                    })
                }
            }
    }
}

...
