...
        self.extraIngredients = []
        self.warnings = []
        self.category = ""
        self.itemNumber = -1
    }
    
    static let pizza = MenuItem(itemName: "Pizza", itemNumber: 1, regularIngredients: ["Tomato Sauce", "Mozzarella Cheese", "Chicken"], warnings: ["Gluten", "Lactose", "Non-veg/non-vegan"], extraIngredients: ["Pesto Sauce", "Sausages", "Ham", "Bacon"], category: "Pizzas")
    
    static let pasta = MenuItem(itemName: "Pasta", itemNumber: 2, regularIngredients: ["Tomato Sauce", "Carbonara Cream", "Chicken"], warnings: ["Gluten", "Lactose", "Non-veg/non-vegan"], extraIngredients: ["Parmesan Cheese", "Cheddar Cheese", "Sausages", "Olives"], category: "Pastas")
    
    
    static let spaghetti = MenuItem(itemName: "Pasta", itemNumber: 3, regularIngredients: ["Tomato Sauce", "Carbonara Cream", "Chicken"], warnings: ["Gluten", "Lactose", "Non-veg/non-vegan"], extraIngredients: ["Parmesan Cheese", "Cheddar Cheese", "Sausages", "Olives"], category: "Pastas")
    
...
